--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ video {
 
 <div id="quiz2" class="page">
 <h2>Question 2 💕</h2>
-<p>When did we kiss for the first time?💋💎<p>
+<p>When did we kiss for the first time?💋💎</p>
 <input type="text" id="q2"><br>
 <button onclick="checkAnswer(2)">Next</button>
 <div id="result2"></div>
@@ -329,4 +329,5 @@ setInterval(createHeart,300);
 
 </body>
 </html>
+
 
