--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ video {
 
 /* Correct Answers - EDIT */
 const correctAnswers = {
-1: "08/12/2017",
+1: ["8 december 2017", "08 december 2017", "8/12/2017","08/12/2017"],
 2: ["3 march 2018", "03 march 2018", "3/3/2018","03/03/2018"],
 3: ["21 may 2018", "21/05/2018"],
 4: ["vision vidhyalaya school","match","sports meet"],
@@ -302,7 +302,7 @@ function sayYes(){
     // Show message + video after explosion
     setTimeout(()=>{
         document.getElementById("response").innerHTML=`
-        <h2>You said YES 😭❤️ I love you forever!</h2>
+        <h2>You said YES 😭❤️ So sweet of you my Babe❤️ I love you forever!</h2>
         <video controls autoplay>
         <source src="video.mp4" type="video/mp4">
         </video>
@@ -329,5 +329,6 @@ setInterval(createHeart,300);
 
 </body>
 </html>
+
 
 
