--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body {
     font-family: 'Segoe UI', sans-serif;
     overflow-x: hidden;
     color: rgb(239, 40, 130);
-    background: linear-gradient(to right, #ff9a9e, #ff4d88);
+    background: linear-gradient(to right, #ff9a9e, #010c09);
     background-size: cover;
     transition: background 1s ease-in-out;
 }
