--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body {
     font-family: 'Segoe UI', sans-serif;
     overflow-x: hidden;
     color: rgb(24, 2, 12);
-    background: linear-gradient(to right, #ff9a9e, #010c09);
+    background: linear-gradient(to right, #ff9a9e, #ff4d88);
     background-size: cover;
     transition: background 1s ease-in-out;
 }
@@ -59,13 +59,13 @@ button {
 }
 
 .yesBtn {
-    background-color: #ff0066;
-    color: rgb(159, 0, 56);
+    background-color: #17d1ac;
+    color: rgb(9, 0, 3);
 }
 
 .noBtn {
-    background-color: rgb(232, 109, 109);
-    color: #ff0066;
+    background-color: rgb(232, 62, 62);
+    color: #0a0105;
     position: absolute;
 }
 
@@ -73,7 +73,7 @@ button {
 .heart {
     position: fixed;
     top: -10px;
-    color: #ff4d88;
+    color: #da1c26;
     font-size: 20px;
     animation: fall linear infinite;
 }
