--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ button {
 
 .noBtn {
     background-color: rgb(232, 62, 62);
-    color: #0a0105;
+    color: #be0d0d;
     position: absolute;
 }
 
