--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body {
     text-align: center;
     font-family: 'Segoe UI', sans-serif;
     overflow-x: hidden;
-    color: rgb(205, 14, 100);
+    color: white;
     background: linear-gradient(to right, #ff9a9e, #ff4d88);
     background-size: cover;
     transition: background 1s ease-in-out;
@@ -22,7 +22,7 @@ body::before {
     position: fixed;
     top:0; left:0;
     width:100%; height:100%;
-    background: rgba(0,0,0,0);
+    background: rgba(218, 15, 133, 0);
     z-index:-1;
 }
 
