--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body::before {
     position: fixed;
     top:0; left:0;
     width:100%; height:100%;
-    background: white;
+    background: rgb(176, 32, 32);
     z-index:-1;
 }
 
@@ -329,3 +329,4 @@ setInterval(createHeart,300);
 
 </body>
 </html>
+
