--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ body {
     text-align: center;
     font-family: 'Segoe UI', sans-serif;
     overflow-x: hidden;
-    color: rgb(237, 232, 232);
+    color: white;
+    background: rgba(0,0,0,0.4);
     background: linear-gradient(to right, #ff9a9e, #ff4d88);
     background-size: cover;
     transition: background 1s ease-in-out;
