--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body {
     text-align: center;
     font-family: 'Segoe UI', sans-serif;
     overflow-x: hidden;
-    color: white;
+    color: rgb(73, 5, 5);
     background: linear-gradient(to right, #ff9a9e, #ff4d88);
     background-size: cover;
     transition: background 1s ease-in-out;
@@ -322,4 +322,5 @@ setInterval(createHeart,300);
 
 </body>
 </html>
+
 
