--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
 #quiz3,
 #quiz4,
 #quiz5 {
-    color: #4b004f;   /* Elegant dark purple */
+    color: #f5e3f6;   /* Elegant dark purple */
 }
 
 /* =============================================== */
@@ -302,3 +302,4 @@ setInterval(createHeart,300);
 </script>
 </body>
 </html>
+
