--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
 #quiz3,
 #quiz4,
 #quiz5 {
-    color: #168dd1;   /* Elegant dark purple */
+    color: #8b0000;   /* Elegant dark purple */
 }
 
 /* =============================================== */
@@ -302,6 +302,7 @@ setInterval(createHeart,300);
 </script>
 </body>
 </html>
+
 
 
 
