--- a/index.html
+++ b/index.html
@@ -25,14 +25,17 @@ body {
 }
 
 /* All Quiz Pages same color */
-#quiz1,
+#quiz1{
+    color:black
+}
+    
 #quiz2,
 #quiz3,
-#quiz4,
+#quiz4{
+    color: #e18bee;   /* Elegant dark purple */}
 #quiz5 {
-    color: #8b0000;   /* Elegant dark purple */
+    color: #8b0000;
 }
-
 /* =============================================== */
 
 .page {
@@ -302,6 +305,7 @@ setInterval(createHeart,300);
 </script>
 </body>
 </html>
+
 
 
 
