--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@ body {
 #quiz1,
 #quiz4
 {
-    color:white;
+     color:rgb(254, 249, 249);
 }
 
 #quiz2,
 #quiz3
 {
-    color:black
+    color:rgb(9, 9, 9)
 }
  /* Elegant dark purple */
 #quiz5 {
@@ -309,3 +309,4 @@ setInterval(createHeart,300);
 </script>
 </body>
 </html>
+
