--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@ video {
 const correctAnswers = {
 1: ["8 december 2017","08 december 2017","8/12/2017","08/12/2017"],
 2: ["3 march 2018","03 march 2018","3/3/2018","03/03/2018"],
-3: ["21 may 2022","21/05/2022","21/05/2022"],
-4: ["vision vidhyalaya school","match","sports meet"],
+3: ["21 may 2022","21/05/2022","21/5/2022"],
+4: ["vision vidhyalaya school","match","sports meet","school"],
 5: "ring"
 };
 
@@ -309,4 +309,5 @@ setInterval(createHeart,300);
 </script>
 </body>
 </html>
+
 
