--- a/index.html
+++ b/index.html
@@ -312,7 +312,9 @@ setTimeout(()=>heart.remove(),1000);
 
 setTimeout(()=>{
 document.getElementById("response").innerHTML=`
-<h2>So sweet of you Babe ❤️ You said YES 😭❤️ I love you Kuttu 💖!</h2>
+<h2>So sweet of you Babe ❤️ You said YES 😭❤️ 
+our 9 years of togetherness will always continue 💎💋❤️ 
+         I love you Kuttu 💖!</h2>
 <video controls autoplay>
 <source src="video.mp4" type="video/mp4">
 </video>`;
@@ -334,4 +336,3 @@ setInterval(createHeart,800);
 </script>
 </body>
 </html>
-
